# raft-consensus

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: server.py
cli/: main.py
docker/: Dockerfile  Dockerfile.production  docker-compose.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: ClusterView.tsx  ControlPanel.tsx  Dashboard.tsx  Header.tsx  Layout.tsx  LogView.tsx  NodePanel.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: WebSocketManager.ts
raft/: __init__.py  config.py  log.py  node.py  rpc.py  state.py
tests/: conftest.py  test_election.py  test_end_to_end.py  test_log.py  test_replication.py
